fixed font an alignment on admin status page

--- a/client/src/app/admin/menue/status/status.component.css
+++ b/client/src/app/admin/menue/status/status.component.css
@@ -5,12 +5,23 @@
   min-width: 300px;
 }
 
+h1{
+  padding-top: 20px;
+}
+
 .mat-table {
   overflow: auto;
   max-height: 500px;
 }
 
-.example-header {
+.filter {
   min-height: 64px;
   padding: 8px 24px 0;
+}
+
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
